small styling adjustments or page consistency

--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -17,7 +17,7 @@
 }
 
 .register_text {
-    font-size: large;
+    font-size: larger;
     font-weight: 300;
     display: flex;
     justify-content: center;
