--- a/src/Styles/confirm.css
+++ b/src/Styles/confirm.css
@@ -1,21 +1,18 @@
-.equipment_page {
+.confirm_page {
     margin-bottom: 55px;
 }
 
-.equipment_title {
+.confirm_text {
+    display: flex;
+    justify-content: center;
     font-weight: 400;
-    margin: 60px;
+    margin-bottom: 40px;
 }
 
-.dates_title {
+.preconfirm_text {
     font-size: larger;
     font-weight: 300;
     display: flex;
     justify-content: center;
     margin: 40px;
-}
-
-.booking_dates {
-    display: flex;
-    justify-content: flex-end;
 }
