--- a/src/Styles/dashboard.css
+++ b/src/Styles/dashboard.css
@@ -1,3 +1,7 @@
+.dashboard_page {
+    margin-bottom: 55px;
+}
+
 .dashboard_text {
     display: flex;
     justify-content: center;
@@ -5,7 +9,3 @@
     margin-bottom: 40px;
 }
 
-.dashboard_page {
-    display: flex;
-    flex-direction: row;
-}
