--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -10,6 +10,7 @@
 }
 
 .address {
+    font-weight: 300;
     display: flex;
     justify-content: flex-start;
     width: 50%;
@@ -18,6 +19,7 @@
 }
 
 .abn {
+    font-weight: 300;
     display: flex;
     justify-content: flex-end;
     width: 50%;
