fix: dashboard booking fields populating correctly, issues with backend
check total price calculations for divisions of months weeks. stock level not updating correctly after return date.

--- a/src/Styles/dashboard.css
+++ b/src/Styles/dashboard.css
@@ -9,3 +9,11 @@
     margin-bottom: 40px;
 }
 
+.bookings_text {
+    display: flex;
+    justify-content: center;
+    font-weight: 300;
+    margin-bottom: 40px;
+    padding-top: 50px;
+}
+
