--- a/src/Styles/equipment.css
+++ b/src/Styles/equipment.css
@@ -19,6 +19,15 @@
     margin-left: 10%;
 }
 
+.checkout_text {
+    font-size: larger;
+    font-weight: 300;
+    display: flex;
+    justify-content: flex-start;
+    margin: 40px;
+    margin-left: 10%;
+}
+
 .booking_dates {
     display: flex;
     margin-top: 50%;
