--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -39,7 +39,7 @@
 
 .error {
     font-weight: 400;
-    font-size: larger;
+    font-size: large;
     border: solid;
     border-radius: 8px;
     margin: 0px;
